# ehrenamtskartei

./: README.md  pyproject.toml
raw/: HABV_93_Ehrenamtskartei.xlsx  ehrenamtskartei-clean.csv  ehrenamtskartei-gnd.csv  ehrenamtskartei-utf.csv  ehrenamtskartei.CSV  ehrenamtskartei.csv
script/: ehrenamtskartei_gnd_match.xlsx  import.ipynb  muster-datensatz.md  todo.md
